--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # My file
-for_code_runner.py
+Stanislav_Hryhorskiy/for_code_runner.py
 .idea/
 
 # User-specific stuff
