--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+__pycache__/
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,pycharm,visualstudiocode
