Added folder HW7 with homework 7

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # My file
 Stanislav_Hryhorskiy/for_code_runner.py
 .idea/
+Stanislav_Hryhorskiy/time_to_practice/
 
 # User-specific stuff
 .idea/**/workspace.xml
