--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 Stanislav_Hryhorskiy/for_code_runner.py
 .idea/
 Stanislav_Hryhorskiy/time_to_practice/
+Stanislav_Hryhorskiy/HW8/**/__pycache__
 
 # User-specific stuff
 .idea/**/workspace.xml
