--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Stanislav_Hryhorskiy/for_code_runner.py
 .idea/
 Stanislav_Hryhorskiy/time_to_practice/
 Stanislav_Hryhorskiy/HW8/**/__pycache__
+Stanislav_Hryhorskiy/HW9/config_task_2.py
 
 # User-specific stuff
 .idea/**/workspace.xml
