--- a/.gitignore
+++ b/.gitignore
@@ -158,5 +158,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
+config_OWM.py
 # End of https://www.toptal.com/developers/gitignore/api/windows,pycharm,visualstudiocode
