--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-./osychov/Project/Telegram_Bot/__pycache__
-./osychov/Project/Telegram_Bot/config_OWM.py
+osychov/Project/Telegram_Bot/__pycache__
+osychov/Project/Telegram_Bot/config_OWM.py
 # End of https://www.toptal.com/developers/gitignore/api/windows,pycharm,visualstudiocodec
+osychov/Project/Telegram_Bot/config_OWM.py
