Git ingore some

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ osychov/Project/Telegram_Bot/__pycache__
 osychov/Project/Telegram_Bot/config_OWM.py
 # End of https://www.toptal.com/developers/gitignore/api/windows,pycharm,visualstudiocodec
 osychov/Project/Telegram_Bot/config_OWM.py
+osychov/HW13_Flack/Flask_Blog/virtenv/config_OWM.py
